Implemented analytics services with infra and swagger
